--- a/style.css
+++ b/style.css
@@ -2,22 +2,20 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
 body{
-    width: 1440px;
-    height: 4792px;
     background: #EFF0F3;
 }
+/*--------------nav-----*/
 header{
+    height: 86px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 22px 20px;
     background: #EFF0F3;
 }
 .name{
+    padding: 26px 15px 0 95px;
     color: #001858;
     font-size: 36px;
     font-style: normal;
@@ -25,44 +23,46 @@ header{
     line-height: normal;
 }
 .name span{
-    color: var(--Blue, #6246EA);
+    color:  #6246EA;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
+.navigation-mane{
+    padding: 31.5px 29.5px;
+}
 nav a{
-    width: 95px;
-    height: 25px;
-    margin: 0 20px;
-    text-decoration: none;
-    color: var(--Black, #2B2C34);
+    color:#2B2C34;
+    font-size: 20px;
     font-style: normal;
+    font-weight: 700;
     line-height: normal;
     text-transform: capitalize;
-    font-weight: 500;
 }
-.one{
-    width: 13.251px;
-    height: 13.252px;
-    fill: var(--Black, #2B2C34);
+.one {
+    width: 17px;
+    height: 17px;
+}
+.too{
+    width: 24px;
+    height: 24px;
 }
 .coffee{
+    width: 213px;
+    height: 24px;
+    display: flex;
     padding: 10px 17px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 4px;
-    background: var(--Blue, #6246EA);
+    background:#6246EA;
     color: #FFFFFE;
-    font-size: 15px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 700;
     line-height: normal;
     text-transform: capitalize;
-}
-.too{
-    width: 20px;
-    height: 20px;
 }
 .hero{
     display: flex;
@@ -83,7 +83,7 @@ nav a{
     margin-bottom: 20px;
 }
 .text p{
-    color: var(--Dark-Grey, #9A9494);
+    color: #9A9494;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -99,8 +99,8 @@ nav a{
     align-items: center;
     gap: 10px;
     border-radius: 8px;
-    background: var(--White, #FFFFFE);
-    color: var(--Grey, #C0C0C0);
+    background: #FFFFFE;
+    color:  #C0C0C0;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -114,8 +114,8 @@ nav a{
     align-items: center;
     gap: 10px;
     border-radius: 8px;
-    background: var(--Blue, #6246EA);
-    color: var(--White, #FFFFFE);
+    background:  #6246EA;
+    color: #FFFFFE;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
@@ -169,4 +169,39 @@ nav a{
 div img{
     border-radius: 8px;
     box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
+}
+/*-----------Featured Article-----*/
+.featured{
+    padding: 80px;
+}
+.featured-category{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.featured-category a{
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+.Fundamental{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:30px
+}
+.Fundamental-card img{
+    width: 100%;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+.Fundamental-card h3{
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+.meta{
+    display: flex;
+    gap:15px;
+    font-size: 14px;
+    color: gray;
 }
