--- a/style.css
+++ b/style.css
@@ -4,56 +4,46 @@
     padding: 0;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
-body{
-    background: #EFF0F3;
-}
-/*--------------nav-----*/
 header{
     height: 86px;
     display: flex;
     justify-content: space-between;
     background: #EFF0F3;
+    box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
 }
-.name{
-    padding: 26px 15px 0 95px;
+.logo{
+    padding: 26px 15px 95px 95px;
     color: #001858;
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
 }
-.name span{
-    color:  #6246EA;
+.logo span{
+    padding: 44px 0 15px 0;
+    color: #6246EA;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
-.navigation-mane{
+nav a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     padding: 31.5px 29.5px;
-}
-nav a{
-    color:#2B2C34;
+    margin: px;
+    text-decoration: none;
+    color: #2B2C34;
     font-size: 20px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 550;
     line-height: normal;
     text-transform: capitalize;
 }
-.one {
-    width: 17px;
-    height: 17px;
-}
-.too{
-    width: 24px;
-    height: 24px;
-}
 .coffee{
-    width: 213px;
-    height: 24px;
-    display: flex;
     padding: 10px 17px;
-    align-items: flex-start;
+    margin: 22px 20px 95px 50px;
     gap: 10px;
     border-radius: 4px;
     background:#6246EA;
@@ -64,71 +54,73 @@ nav a{
     line-height: normal;
     text-transform: capitalize;
 }
-.hero{
+.main{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 80px;
 }
-.text{
+.main-text{
+    height: 345px
+    width: 664px;
     max-width: 500px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    flex-shrink: 0;
 }
-.text h1{
+.main-text h1{
+    width: 617px;
     color: #2B2C34;
     font-size: 64px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     text-transform: capitalize;
-    margin-bottom: 20px;
 }
-.text p{
+.main-text p{
+    width: 652px;
     color: #9A9494;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 25px;
+    border-left:4px solid black;
+    padding-left: 15px;
 }
 .subscribe{
     display: flex;
 }
 .subscribe input{
-    display: flex;
     padding: 21px 200px 21px 25px;
-    align-items: center;
     gap: 10px;
+    border: 1px solid #ddd;
+    outline: none;
     border-radius: 8px;
     background: #FFFFFE;
-    color:  #C0C0C0;
+    color:#C0C0C0;
     font-size: 20px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 .subscribe button{
-    display: flex;
+    border: none;
+    cursor: pointer;
     height: 67px;
     padding: 20px 23px 19px 23px;
-    justify-content: center;
-    align-items: center;
     gap: 10px;
     border-radius: 8px;
-    background:  #6246EA;
+    background: #6246EA;
     color: #FFFFFE;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
-    text-transform: capitalize;
+
+
 
 }
-.image{
-    display: flex;
-    width: 470px;
-    padding: 12.874px 18.074px 10.757px 17.649px;
-    justify-content: center;
-    align-items: center;
+.main-image{
+    width: 400px;
+
 }
 /*---------Category----*/
 .category{
