--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@
     padding: 0;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
+body{
+    background: #FFFFFE;
+}
+/*----------------------header------------*/
 header{
-    height: 86px;
+    height: 15vh;
+    background: #EFF0F3;
     display: flex;
     justify-content: space-between;
-    background: #fdfcfc;
+    align-items: center;
+    padding: 22px 95px;
     box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
 }
 .logo{
@@ -20,7 +26,6 @@ header{
     line-height: normal;
 }
 .logo span{
-    padding: 44px 0 15px 0;
     color: #6246EA;
     font-size: 18px;
     font-style: normal;
@@ -32,7 +37,6 @@ nav a {
     justify-content: center;
     align-items: center;
     padding: 31.5px 29.5px;
-    margin: px;
     text-decoration: none;
     color: #2B2C34;
     font-size: 20px;
@@ -54,31 +58,34 @@ nav a {
     line-height: normal;
     text-transform: capitalize;
 }
+/*------------------------main---------------------*/
 .main{
-    height: 814px;
+    margin: 0 auto;
+    padding: 271px 95px;
+    height: 100%;
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 80px;
+    gap: 60px;
     background: #EFF0F3;
 }
-.main-text{
+.main-left{
+    flex: 1;
+    display: flex;
     flex-direction: column;
-    height: 617px;
     gap: 30px;
     width: 664px;
     max-width: 500px;
 }
-.main-text h1{
+.main-left h1{
     width: 617px;
     color: #2B2C34;
     font-size: 64px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    text-transform: capitalize;
 }
-.main-text p{
+.text{
     width: 652px;
     color: #9A9494;
     font-size: 20px;
@@ -113,12 +120,16 @@ nav a {
     font-size: 20px;
     font-weight: 700;
 }
-.main-image{
+.main-right{
+    flex: 1;
     display: flex;
+    justify-content: center;
+}
+.main-right img{
+    max-width: 100%;
+    height: auto;
     width: 470px;
     padding: 12.874px 18.074px 10.757px 17.649px;
-    justify-content: center;
-    align-items: center;
 }
 /*---------Category----*/
 .category{
@@ -194,4 +205,111 @@ div img{
     gap:15px;
     font-size: 14px;
     color: gray;
+}
+button{
+    display: flex;
+    padding: 20px 23px 19px 23px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background:  #6246EA;
+    color: #FFFFFE;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: capitalize;
+}
+/*-----------subscribe section--------------*/
+.subscribe-section{
+    padding: 100px 80px;
+    text-align: center;
+    background: #EFF0F3;
+}
+.subscribe-box img{
+    width: 60px;
+    margin-bottom: 20px;
+}
+.subscribe-box h2{
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+.subscribe-box p{
+    color: gray;
+    margin-bottom: 30px;
+}
+.subscribe-form{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+.subscribe-form input{
+    width: 350px;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+}
+.subscribe-form button{
+    padding: 15px 30px;
+    border: none;
+    border-radius: 10px;
+    font-weight: 600;
+}
+/*----------------------footer----------------*/
+.footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 70px 120px 95px;
+    background: #E4E5E9;
+}
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 60px;
+    margin-bottom: 50px;
+}
+.footer-col h3 {
+    color: #001858;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.footer-col h3 span{
+    color: #6246EA;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.footer-col p{
+    color: #2B2C34;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.logo {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+.footer-col h4{
+    margin-bottom: 20px;
+}
+.footer-col ul{
+    list-style: none;
+}
+.footer-col ul li{
+    margin-bottom: 10px;
+}
+.footer-bottom{
+    color: #2B2C34;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-top: 1px solid #C0C0C0;;
+    padding-top: 20px;
 }
